# solana-misc

./: .gitignore  Cargo.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: rust.yml
driver/: Cargo.toml
driver/src/: main.rs
encodings-match/: Cargo.toml
encodings-match/src/: lib.rs
keys-match/: Cargo.toml
keys-match/src/: lib.rs
macro/: Cargo.toml
macro/.github/: dependabot.yml
macro/src/: lib.rs
macro/tests/: runner.rs
macro/tests/failures/: 01-fail-too-short.rs  02-fail-too-long.rs  02-fail-too-long.stderr  03-fail-decode.rs  03-fail-decode.stderr  04-fail-field.rs  04-fail-field.stderr
macro/tests/successes/: 06-barf-when-unequal.rs
solana-misc-derive/: Cargo.toml
solana-misc-derive/src/: lib.rs
src/: main.rs
tests/failures/: 01-fail-too-short.rs  01-fail-too-short.stderr
