[package]
name = "solana-misc"
version = "0.1.0"
authors = ["hunter Jozwiak <hunter.t.joz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.6.4"
bs58 = "0.4.0"
 solana-misc-macro = {path = "./macro"}