[package]
name = "driver"
version = "0.1.0"
authors = ["Hunter Jozwiak <hunter.t.joz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.7"
assert-keys-equal-macro = { path = "../macro"}
