[package]
name = "assert-keys-equal-macro"
version = "0.1.0"
authors = ["hunter Jozwiak <hunter.t.joz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["full"] }
solana-program = "1.15.2"
proc-macro2 = "1.0.60"
bs58 = "0.4.0"
quote = "1.0.27"
trybuild = "1.0.80"
[lib]
proc-macro = true
