[package]
name = "assert-keys-equal-macro"
version = "0.1.0"
authors = ["hunter Jozwiak <hunter.t.joz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.28", features = ["full"] }
solana-program = "1.16.16"
proc-macro2 = "1.0.56"
bs58 = "0.5.0"
quote = "1.0.32"
trybuild = "1.0.80"
[lib]
proc-macro = true
