[package]
name = "solana-misc-derive"
version = "0.1.0"
authors = ["hunter Jozwiak <hunter.t.joz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.69"
solana-program = "1.6.4"
quote = "1.0.9"
bs58 = "0.4.0"
[lib]
proc-macro = true